--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
         <dependencies>
             <dependency>
                 <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                <artifactId>dominium</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
                 <artifactId>domaene</artifactId>
                 <version>${project.version}</version>
             </dependency>
