--- a/pom.xml
+++ b/pom.xml
@@ -539,6 +539,7 @@
         <module>domaene</module>
         <module>infrastruktur</module>
         <module>dominium</module>
+        <module>dominium-persistenz-jpa</module>
     </modules>
 </project>
 
